# src/routes/contact.routes.ts
@@ -1,5 +1,5 @@
 import { Router, Request, Response, NextFunction } from 'express';
-import { addContact, removeContact, sendFriendRequest, acceptFriendRequest, rejectFriendRequest } from '../controllers/contact.controller';
+import { addContact, removeContact, sendFriendRequest, acceptFriendRequest, rejectFriendRequest, getFriendRequests, getFullUserProfile } from '../controllers/contact.controller';
 import { authMiddleware } from '../middlewares/auth.middleware';
 import { addContactValidation, removeContactValidation, sendFriendRequestValidation, acceptFriendRequestValidation, rejectFriendRequestValidation } from '../validation/contactValidation';
 import { handleValidationMiddleware } from '../helpers/validation';
@@ -11,5 +11,7 @@ router.post('/remove', authMiddleware, removeContactValidation, handleValidation
 router.post('/request', authMiddleware, sendFriendRequestValidation, handleValidationMiddleware, sendFriendRequest);
 router.post('/accept', authMiddleware, acceptFriendRequestValidation, handleValidationMiddleware, acceptFriendRequest);
 router.post('/reject', authMiddleware, rejectFriendRequestValidation, handleValidationMiddleware, rejectFriendRequest);
+router.get('/requests', authMiddleware, handleValidationMiddleware, getFriendRequests);
+router.get('/profile', authMiddleware, handleValidationMiddleware, getFullUserProfile);
 
 export default router;
